--- a/Css/Base.css
+++ b/Css/Base.css
@@ -49,8 +49,7 @@ button:hover{
 /* FOOTER */
 
 .foot {
-    position:fixed;
-    bottom: 0px;
+    
     padding-bottom: 10px;
     width: 100%;
     background-color: lightgray;
@@ -58,4 +57,15 @@ button:hover{
 
 .social {
 margin-bottom: 15px;
+padding-top: 15px;
+justify-content: space-evenly;
+display: flex;
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: rgb(112, 44, 249);
 }
