--- a/Css/Base.css
+++ b/Css/Base.css
@@ -6,6 +6,7 @@
     
 }
 
+
 .navsotto{
     margin-top: 10px;
 }
@@ -49,8 +50,8 @@ button:hover{
 /* FOOTER */
 
 .foot {
-    position:fixed;
-    bottom: 0px;
+    /* position: fixed;
+    bottom: 0; */
     padding-bottom: 10px;
     width: 100%;
     background-color: lightgray;
