--- a/Css/homepage.css
+++ b/Css/homepage.css
@@ -8,18 +8,31 @@
 
   .col-cat {
     margin-top: 15px;
+    
+  }
+
+  .col-cat:hover{
+    transform: scale(1.1);
+  }
+
+  .col-pref {
+    margin-top: 15px;
+    justify-content: center;
+    display: flex;
   }
 
   .imgPromo {
     margin-top: 30px;
+    width: 100%;
   }
 
   .scritta {
-    margin-bottom: -10px;
     margin-top: 30px;
+    text-align: center;
   }
 
   .sez-consigliati{
     margin-bottom: 30px;
-    
   }
+
+
