--- a/Css/homepage.css
+++ b/Css/homepage.css
@@ -19,6 +19,10 @@
     transform: scale(1.1);
   }
 
+  .testo-cat p {
+    color: white;
+  }
+  
   .col-pref {
     margin-top: 15px;
     justify-content: center;
@@ -48,6 +52,8 @@
     right: 12px;
     font-weight: bold;
   }
+
+
  .col-cat a {
   text-decoration: none;
   color: white;
@@ -72,10 +78,19 @@
   border-color: rgb(112, 44, 249) !important;
 }
 
-.costo-bottone {
-  bottom: 10px;
+.costo {
+  font-weight: bold;
 }
 
 .acquista {
-  
-}
+    margin-top: 10px; 
+    width: 100%; 
+  }
+
+  .div-immagine{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   padding: 30px;
+  }
