--- a/Css/Prodotto.css
+++ b/Css/Prodotto.css
@@ -1,83 +1,74 @@
 body {
     font-family: Arial, sans-serif;
-    margin-top: 5%;
-
+    margin: 0;
 }
 
 .flex-container {
     display: flex;
-    max-width: 900px;
     margin: auto;
     gap: 20px;
-    flex-direction: row;
     margin-top: 30px;
-}
-
-.miniatura {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.miniatura img {
-    width: 50px;
-    cursor: pointer;
-    border: 2px solid transparent;
-    border-radius: 10px;
-    flex-direction: column;
-}
-
-.miniatura img:hover {
-    border: 3px solid rgb(0, 0, 0);
-}
-.foto-principale {
-    flex: 2;
-    max-width: 100%;
-
-}
-
-.foto-principale img {
+    align-items: flex-start;
+    justify-content: center; 
+    flex-wrap: wrap; 
     width: 100%;
-    max-width: 300px;
+}
+
+.conta {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 90%;
+    margin-left: 35%; 
+
+}
+
+.foto-principale {
+    flex: 40%; 
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.foto-principale-img {
+    width: 25%; 
     height: auto;
     border-radius: 10px;
-    flex-direction: column;
+    box-shadow: 5px 5px 18px;
 }
-
-
 
 .descrizione-prodotto {
     display: flex;
-    flex-direction: column;
-    gap: 0px;
-    margin-left: 13px;
+    flex-direction: column; 
+    margin-left: 20px;
+    max-width: 40%; 
+    justify-content: flex-start;
+    padding-right: 10px;
+    flex: 1 1 100%;
 }
+
 .container-color, .container-size {
     border-radius: 40px;
     padding: 10px;
-    font-size: 20px;
+    font-size: 18px;
     background-color: white;
     cursor: pointer;
-    
+    width: 100%;
+    max-width: 500px;
 }
+
 select {
-    display: flex;
-    width: 100%; 
-    height: 40px; 
-    font-size: 18px; 
-    border-radius: 10px; 
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 10px;
     padding: 5px;
     cursor: pointer;
-    display: block; 
-}
-.btn-dark:hover{
-    background-color: whitesmoke ;
-    color: black;
 }
 
 .btn-dark {
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    color: white;
     padding: 15px 20px;
     margin-top: 10px;
     cursor: pointer;
@@ -85,5 +76,11 @@ select {
     border-radius: 30px;
     font-size: 15px;
     align-self: flex-start;
-    transition: background-color 0.50s ease; 
+    transition: background-color 0.5s ease;
+    margin-left: 10px;
+}
+
+.btn-dark:hover {
+    background-color: whitesmoke;
+    color: black;
 }
