--- a/Css/Prodotto.css
+++ b/Css/Prodotto.css
@@ -12,40 +12,53 @@ body {
     justify-content: center; 
     flex-wrap: wrap; 
     width: 100%;
+    background-color: white !important;
+    
 }
 
 .conta {
-    align-items: center;
-    justify-content: center;
     display: flex;
     width: 90%;
-    margin-left: 35%;
-    height: auto; 
+    margin: auto;
+    height: auto;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
 
 }
-
+.row {
+    display: flex;
+    gap: 40px; 
+    align-items: flex-start;
+    width: 100%;
+}
 .foto-principale {
     flex: 40%; 
-    margin-left: auto;
-    margin-right: auto;
     display: block;
 }
 
 .foto-principale-img {
-    width: 25%; 
+    float:left;
+    width: 40%; 
     height: auto;
     border-radius: 10px;
     box-shadow: 5px 5px 18px;
+    margin-bottom: 20%;
+    margin-top: 5%;
+    margin-left: 30%;
 }
 
+
 .descrizione-prodotto {
+    margin-top: 5%;
+    flex: 2;
     display: flex;
     flex-direction: column; 
     margin-left: 20px;
-    max-width: 40%; 
-    justify-content: flex-start;
+    max-width: 60%; 
+    justify-content: space-between;
     padding-right: 10px;
-    flex: 1 1 100%;
+   
 }
 
 .container-color, .container-size {
