--- a/Css/Prodotto.css
+++ b/Css/Prodotto.css
@@ -39,13 +39,15 @@ body {
 
 .foto-principale-img {
     float:left;
-    width: 40%; 
+    min-width: 300px; 
+    max-width: 350px;
     height: auto;
     border-radius: 10px;
     box-shadow: 5px 5px 18px;
     margin-bottom: 20%;
     margin-top: 5%;
     margin-left: 30%;
+    padding: 5%;
 }
 
 
@@ -54,11 +56,11 @@ body {
     flex: 2;
     display: flex;
     flex-direction: column; 
-    margin-left: 20px;
+
     max-width: 60%; 
     justify-content: space-between;
-    padding-right: 10px;
-   
+    padding-right: 5px;
+   text-align: left;
 }
 
 .container-color, .container-size {
@@ -88,10 +90,10 @@ select {
     cursor: pointer;
     width: auto;
     border-radius: 30px;
-    font-size: 15px;
     align-self: flex-start;
     transition: background-color 0.5s ease;
-    margin-left: 10px;
+    margin-right: 25px;
+    text-align: left;
 }
 
 .btn-dark:hover {
