--- a/style.css
+++ b/style.css
@@ -99,7 +99,6 @@ margin: 1px;
 }
 #TITOLO{
     text-align: center !important;
-    
 }
 
 .schiaccia {
@@ -110,6 +109,184 @@ margin: 1px;
   }
   .filtri{
     display: flex;
-flex-wrap: wrap;
-    justify-content: space-around !important;
+   flex-wrap: wrap;
+   justify-content: center;
+ 
   }
+  .card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+  }
+
+  
+.head {
+    background-color:rgb(112, 44, 249, 0.1) !important;
+    padding-top: 15px;
+    
+}
+
+
+.navsotto{
+    margin-top: 10px;
+}
+
+
+.navcat{
+    padding:10px;
+}
+.navcat:hover {
+    background-color: rgb(112, 44, 249) !important;
+    color:white;
+}
+
+/* BOTTONI */
+.cart {
+    background-color: rgb(112, 44, 249) !important;
+    color: white !important;
+    border-color: rgb(112, 44, 249) !important;
+    border-width: 2px !important;
+}
+
+.cart:hover{
+    background-color: white !important;
+    color: rgb(112, 44, 249) !important;
+    border-color: rgb(112, 44, 249) !important;
+}
+
+button {
+    background-color: rgb(112, 44, 249) !important;
+    color: white !important;
+    border-color: rgb(112, 44, 249) !important;
+    border-width: 2px !important;
+}
+
+button:hover{
+    background-color: white !important;
+    color: rgb(112, 44, 249) !important;
+    border-color: rgb(112, 44, 249) !important;
+}
+
+/* FOOTER */
+.foot {
+    /* position: fixed;
+    bottom: 0; */
+    padding-bottom: 10px;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.social {
+    margin-bottom: 15px;
+    padding-top: 15px;
+    justify-content: center;
+    display: flex;
+}
+
+.fa-brands {
+    margin: 5px;
+}
+
+.dati {
+    font-size: small;
+}
+
+/* BODY */
+a {
+    color: black;
+}
+
+a:hover {
+    color: rgb(112, 44, 249);
+}
+.head {
+    background-color:rgb(112, 44, 249, 0.1) !important;
+    padding-top: 15px;
+    
+}
+
+.navsotto{
+    margin-top: 10px;
+}
+
+
+.navcat{
+    
+    padding:10px;
+}
+.navcat:hover {
+    background-color: rgb(112, 44, 249) !important;
+    color:white;
+}
+
+/* BOTTONI */
+.cart {
+    background-color: rgb(112, 44, 249) !important;
+    color: white !important;
+    border-color: rgb(112, 44, 249) !important;
+    border-width: 2px !important;
+}
+
+.cart:hover{
+    background-color: white !important;
+    color: rgb(112, 44, 249) !important;
+    border-color: rgb(112, 44, 249) !important;
+}
+button {
+    background-color: rgb(112, 44, 249) !important;
+    color: white !important;
+    border-color: rgb(112, 44, 249) !important;
+    border-width: 2px !important;
+}
+
+button:hover{
+    background-color: white !important;
+    color: rgb(112, 44, 249) !important;
+    border-color: rgb(112, 44, 249) !important;
+}
+
+/* FOOTER */
+
+.foot {
+    
+    bottom: 0px;
+    padding-bottom: 10px;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.social {
+margin-bottom: 15px;
+}
+.titolo{
+    text-align: center;
+}
+.card{
+    
+    display: flex;
+    float: left;
+    
+}
+ 
+
+
+#gallery{
+    margin: 15px;
+    display: flex;
+    justify-content: space-evenly;
+}
+#button{
+background-color: aliceblue !important ;
+color: black !important;
+border-color: black !important;
+border-radius: 0% !important;
+margin: 1px;
+
+}
+#TITOLO{
+    text-align: center !important;
+    
+}
+
+  
