--- a/Css/Prodotto.css
+++ b/Css/Prodotto.css
@@ -36,11 +36,9 @@ body {
     flex: 40%; 
     display: block;
 }
-
 .foto-principale-img {
-    float:left;
-    width: 300px; 
-    max-width: 350px;
+    float:left; 
+   width: 50%;
     height: auto;
     border-radius: 10px;
     box-shadow: 5px 5px 18px;
@@ -48,6 +46,7 @@ body {
     margin-top: 5%;
     margin-left: 30%;
     padding: 5%;
+    aspect-ratio: 3 / 3 ;
 }
 
 
@@ -56,7 +55,6 @@ body {
     flex: 2;
     display: flex;
     flex-direction: column; 
-
     max-width: 60%; 
     justify-content: space-between;
     padding-right: 5px;
